@@ -26,6 +26,8 @@
         <hibernate-Validator>8.0.1.Final</hibernate-Validator>
         <micrometer-version>1.9.9</micrometer-version>
         <awssdk-version>2.41.25</awssdk-version>
+        <argLine></argLine>
+        <surefireArgLine>-Dnet.bytebuddy.experimental=true</surefireArgLine>
     </properties>
     <dependencies>
         <dependency>
@@ -133,11 +135,17 @@
             <version>2.7</version>
         </dependency>
 
-        <!-- junit 5, unit test -->
         <dependency>
-            <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter-engine</artifactId>
-            <version>5.3.1</version>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>5.21.0</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-junit-jupiter</artifactId>
+            <version>5.21.0</version>
             <scope>test</scope>
         </dependency>
 
@@ -177,7 +185,6 @@
             <artifactId>gson</artifactId>
             <version>${gson-version}</version>
         </dependency>
-
 
         <dependency>
             <groupId>org.postgresql</groupId>
@@ -268,7 +275,15 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.22.0</version>
+                <version>3.2.5</version>
+                <configuration>
+                    <failIfNoTests>true</failIfNoTests>
+                    <argLine>
+                        ${argLine} ${surefireArgLine}
+                        -XX:+EnableDynamicAgentLoading
+                        -javaagent:${settings.localRepository}/net/bytebuddy/byte-buddy-agent/1.17.7/byte-buddy-agent-1.17.7.jar
+                    </argLine>
+                </configuration>
             </plugin>
         </plugins>
     </build>
